--- a/suckless/sxiv/Makefile
+++ b/suckless/sxiv/Makefile
@@ -3,22 +3,22 @@ version = 25+
 srcdir = .
 VPATH = $(srcdir)
 
-PREFIX = /usr/local
+PREFIX = /usr/X11R7
 MANPREFIX = $(PREFIX)/share/man
 
 # autoreload backend: inotify/nop
 AUTORELOAD = inotify
 
 # enable features requiring giflib (-lgif)
-HAVE_GIFLIB = 1
+HAVE_GIFLIB = 0
 
 # enable features requiring libexif (-lexif)
-HAVE_LIBEXIF = 1
+HAVE_LIBEXIF = 0
 
 cflags = -std=c99 -Wall -pedantic $(CFLAGS)
 cppflags = -I. $(CPPFLAGS) -D_XOPEN_SOURCE=700 \
   -DHAVE_GIFLIB=$(HAVE_GIFLIB) -DHAVE_LIBEXIF=$(HAVE_LIBEXIF) \
-  -I/usr/include/freetype2 -I$(PREFIX)/include/freetype2
+  -I$(PREFIX)/include/freetype2
 
 lib_exif_0 =
 lib_exif_1 = -lexif
